Actualizo el notebook Prep_Course_Homework_03

--- a/M03_variablesydatos/Prep_Course_Homework_03.ipynb
+++ b/M03_variablesydatos/Prep_Course_Homework_03.ipynb
@@ -639,22 +639,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "holaholaholahola; 4 Fue la cantidad de veces que dije hola hoy\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'hola hola hola hola ; 4 Fue la cantidad de veces que dije hola hoy'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "saludo= \"hola\"\n",
+    "saludo= \"hola \"\n",
     "ingresos=4\n",
     "\n",
-    "print((saludo * ingresos) + \"; \"+ str(ingresos) + \" Fue la cantidad de veces que dije \"+ saludo + \" hoy\")"
+    "(saludo * ingresos) + \"; \"+ str(ingresos) + \" Fue la cantidad de veces que dije \"+ saludo + \"hoy\""
    ]
   },
   {
