--- a/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
+++ b/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
@@ -18,10 +18,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " es mayor a 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=15\n",
+    "\n",
+    "if num > 0:\n",
+    "        print(\" es mayor a 0\")\n",
+    "elif num < 0:\n",
+    "        print (\"es menor a 0\")\n",
+    "else:\n",
+    "        print(\"es 0\")\n"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +50,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distintos\n"
+     ]
+    }
+   ],
+   "source": [
+    "var1=\"Hola\"\n",
+    "var2= 20\n",
+    "\n",
+    "if type(var1)==type(var2):\n",
+    "    print(\"Mismo tipo de dato\")\n",
+    "else:\n",
+    "    print(\"Distintos\")"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +81,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Es impar\n",
+      "2 Es par\n",
+      "3 Es impar\n",
+      "4 Es par\n",
+      "5 Es impar\n",
+      "6 Es par\n",
+      "7 Es impar\n",
+      "8 Es par\n",
+      "9 Es impar\n",
+      "10 Es par\n",
+      "11 Es impar\n",
+      "12 Es par\n",
+      "13 Es impar\n",
+      "14 Es par\n",
+      "15 Es impar\n",
+      "16 Es par\n",
+      "17 Es impar\n",
+      "18 Es par\n",
+      "19 Es impar\n",
+      "20 Es par\n"
+     ]
+    }
+   ],
+   "source": [
+    "corte = 20\n",
+    "\n",
+    "for i in range (1,21):\n",
+    "    if i % 2 == 0:\n",
+    "        print(str(i) + \" Es par\")\n",
+    "    else:\n",
+    "        print(str(i) + \" Es impar\")"
+   ]
   },
   {
    "attachments": {},
@@ -63,10 +131,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "8\n",
+      "27\n",
+      "64\n",
+      "125\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (0,6):\n",
+    "    print (i**3)"
+   ]
   },
   {
    "attachments": {},
@@ -78,10 +162,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "ciclos= 10\n",
+    "\n",
+    "for i in range(0, ciclos):\n",
+    "    print(i)\n"
+   ]
   },
   {
    "attachments": {},
@@ -93,10 +199,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El factorial es 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "if (type(n) == int):\n",
+    "    if (n > 0):\n",
+    "        factorial = n\n",
+    "        while (n > 2):\n",
+    "            n = n - 1\n",
+    "            factorial = factorial * n\n",
+    "        print('El factorial es', factorial)\n",
+    "    else:\n",
+    "        print('La variable no es mayor a cero')\n",
+    "else:\n",
+    "    print('La variable no es un entero')"
+   ]
   },
   {
    "attachments": {},
@@ -220,11 +347,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "c85384e4cb51c8b72350f3a8712cc8351fdc3955e32a27f9b60c6242ab125f01"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -238,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
