--- a/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
+++ b/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
@@ -235,10 +235,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i=1, j= 1\n",
+      "i=2, j= 2\n",
+      "i=3, j= 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "j=1\n",
+    "\n",
+    "while j <= 3:\n",
+    "    for i in range (1, 4):\n",
+    "        print(f\"i={i}, j= {j}\")\n",
+    "        j+=1"
+   ]
   },
   {
    "attachments": {},
@@ -250,10 +267,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i=1, j=1\n",
+      "i=1, j=2\n",
+      "i=1, j=3\n",
+      "i=2, j=1\n",
+      "i=2, j=2\n",
+      "i=2, j=3\n",
+      "i=3, j=1\n",
+      "i=3, j=2\n",
+      "i=3, j=3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 4):   # i = 1, 2, 3\n",
+    "    j = 1               # inicializo j en 1 para cada i\n",
+    "    while j <= 3:       # mientras j sea 1,2,3\n",
+    "        print(f\"i={i}, j={j}\")\n",
+    "        j += 1\n"
+   ]
   },
   {
    "attachments": {},
@@ -265,10 +304,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "for numero in range(2, 31):\n",
+    "    Primo_True = True\n",
+    "    \n",
+    "    for divisor in range(2, numero):\n",
+    "        if numero % divisor == 0:\n",
+    "            Primo_True = False\n",
+    "    \n",
+    "    if Primo_True:\n",
+    "        print(numero)\n",
+    "\n"
+   ]
   },
   {
    "attachments": {},
@@ -280,10 +347,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "for numero in range(2, 31):\n",
+    "    primo = True\n",
+    "    \n",
+    "    for divisor in range(2, numero):\n",
+    "        if numero % divisor == 0:\n",
+    "            primo = False\n",
+    "            break\n",
+    "    \n",
+    "    if primo:\n",
+    "        print(numero)\n"
+   ]
   },
   {
    "attachments": {},
@@ -298,7 +393,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Usar Break optimizó el código ya que, evita hacer divisiones innecesarias. Sin el, el código prueba todos los posibles divisores aunque ya sepa que no es primo."
+   ]
   },
   {
    "attachments": {},
@@ -310,10 +407,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "108\n",
+      "120\n",
+      "132\n",
+      "144\n",
+      "156\n",
+      "168\n",
+      "180\n",
+      "192\n",
+      "204\n",
+      "216\n",
+      "228\n",
+      "240\n",
+      "252\n",
+      "264\n",
+      "276\n",
+      "288\n",
+      "300\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero_12 = 100\n",
+    "\n",
+    "while numero_12 <= 300:\n",
+    "    if numero_12 % 12 != 0:\n",
+    "        numero_12 += 1\n",
+    "        continue\n",
+    "    else:\n",
+    "        print(numero_12)\n",
+    "        numero_12 += 1"
+   ]
   },
   {
    "attachments": {},
@@ -325,10 +456,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 es primo\n",
+      "Programa terminado.\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    numero_In = int(input(\"Ingresá un número: \"))\n",
+    "\n",
+    "    es_primo = True\n",
+    "    if numero_In < 2:\n",
+    "        es_primo = False\n",
+    "    else:\n",
+    "        for divisor in range(2, numero_In):\n",
+    "            if numero_In % divisor == 0:\n",
+    "                es_primo = False\n",
+    "\n",
+    "    if es_primo:\n",
+    "        print(numero_In, \"es primo\")\n",
+    "    else:\n",
+    "        print(numero_In, \"NO es primo\")\n",
+    "\n",
+    "    seguir = input(\"¿Querés probar con otro número? (s/n): \")\n",
+    "    if seguir == \"n\" or seguir == \"N\":\n",
+    "        print(\"Programa terminado.\")\n",
+    "        break\n"
+   ]
   },
   {
    "attachments": {},
@@ -340,10 +501,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "102\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero_3_6= 100\n",
+    "\n",
+    "while numero_3_6 <= 300:\n",
+    "    if numero_3_6 % 3 == 0 and numero_3_6 % 6 == 0:\n",
+    "        print (numero_3_6)\n",
+    "        break\n",
+    "    else:\n",
+    "        numero_3_6 += 1\n"
+   ]
   }
  ],
  "metadata": {
